--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/Upload/UploadSelectionListViewController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/Upload/UploadSelectionListViewController.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,7 +14,10 @@
             <connections>
                 <outlet property="closeButton" destination="M92-0S-ptF" id="iPd-Sw-vy0"/>
                 <outlet property="collectionView" destination="sra-sb-qe9" id="Xa5-Da-r3z"/>
+                <outlet property="containerView" destination="t3z-1z-aMS" id="2wt-77-wmf"/>
+                <outlet property="containerViewHeight" destination="JtS-ZM-mOi" id="wzL-Ks-m2p"/>
                 <outlet property="footerContainer" destination="DR8-TK-wWz" id="Sj9-OR-U8P"/>
+                <outlet property="gradientView" destination="1tU-ZV-wMy" id="BAk-3t-p8i"/>
                 <outlet property="headerContainer" destination="XGm-ep-YbO" id="GBA-cq-0fX"/>
                 <outlet property="shareButton" destination="fDW-rH-bAh" id="O5l-GV-HlA"/>
                 <outlet property="titleLabel" destination="xAE-wU-DWu" id="1cf-yf-bur"/>
@@ -25,89 +29,111 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XGm-ep-YbO">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t3z-1z-aMS">
+                    <rect key="frame" x="20" y="256" width="374" height="384"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xAE-wU-DWu">
-                            <rect key="frame" x="8" y="22" width="352" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M92-0S-ptF">
-                            <rect key="frame" x="368" y="20" width="26" height="26"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1tU-ZV-wMy">
+                            <rect key="frame" x="0.0" y="65" width="374" height="254"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XGm-ep-YbO">
+                            <rect key="frame" x="0.0" y="0.0" width="374" height="65"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xAE-wU-DWu">
+                                    <rect key="frame" x="166.5" y="22" width="41.5" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M92-0S-ptF">
+                                    <rect key="frame" x="328" y="20" width="26" height="26"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="M92-0S-ptF" secondAttribute="height" multiplier="1:1" id="u39-fu-oxg"/>
+                                        <constraint firstAttribute="width" constant="26" id="vax-w0-5Z8"/>
+                                    </constraints>
+                                    <state key="normal" title="Button"/>
+                                    <connections>
+                                        <action selector="onCloseButtonTap:" destination="-1" eventType="touchUpInside" id="lhp-9S-NBJ"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
-                                <constraint firstAttribute="width" secondItem="M92-0S-ptF" secondAttribute="height" multiplier="1:1" id="u39-fu-oxg"/>
-                                <constraint firstAttribute="width" constant="26" id="vax-w0-5Z8"/>
+                                <constraint firstItem="xAE-wU-DWu" firstAttribute="centerX" secondItem="XGm-ep-YbO" secondAttribute="centerX" id="3ky-90-Qy8"/>
+                                <constraint firstAttribute="height" constant="65" id="VME-dC-cvc"/>
+                                <constraint firstItem="xAE-wU-DWu" firstAttribute="centerY" secondItem="XGm-ep-YbO" secondAttribute="centerY" id="cpm-5U-wAA"/>
+                                <constraint firstAttribute="trailing" secondItem="M92-0S-ptF" secondAttribute="trailing" constant="20" id="hds-2R-Uyr"/>
+                                <constraint firstItem="M92-0S-ptF" firstAttribute="top" secondItem="XGm-ep-YbO" secondAttribute="top" constant="20" id="mgK-8z-euK"/>
                             </constraints>
-                            <state key="normal" title="Button"/>
-                            <connections>
-                                <action selector="onCloseButtonTap:" destination="-1" eventType="touchUpInside" id="lhp-9S-NBJ"/>
-                            </connections>
-                        </button>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DR8-TK-wWz">
+                            <rect key="frame" x="0.0" y="319" width="374" height="65"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fDW-rH-bAh" customClass="InsetsButton" customModule="lifeBox_Business" customModuleProvider="target">
+                                    <rect key="frame" x="20" y="0.0" width="334" height="45"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="45" id="3Ga-L7-uKQ"/>
+                                    </constraints>
+                                    <state key="normal" title="Button"/>
+                                    <connections>
+                                        <action selector="onShareTap:" destination="-1" eventType="touchUpInside" id="zfF-lZ-GV7"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="65" id="agd-8e-tRk"/>
+                                <constraint firstAttribute="trailing" secondItem="fDW-rH-bAh" secondAttribute="trailing" constant="20" id="cHP-Cq-T81"/>
+                                <constraint firstItem="fDW-rH-bAh" firstAttribute="leading" secondItem="DR8-TK-wWz" secondAttribute="leading" constant="20" id="moc-V7-Li5"/>
+                                <constraint firstAttribute="bottom" secondItem="fDW-rH-bAh" secondAttribute="bottom" constant="20" id="yuo-D4-SWz"/>
+                            </constraints>
+                        </view>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="sra-sb-qe9">
+                            <rect key="frame" x="0.0" y="65" width="374" height="254"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Sle-aw-2oP">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstItem="xAE-wU-DWu" firstAttribute="leading" secondItem="XGm-ep-YbO" secondAttribute="leading" constant="8" id="7sR-Nu-QNj"/>
-                        <constraint firstAttribute="height" constant="65" id="VME-dC-cvc"/>
-                        <constraint firstItem="M92-0S-ptF" firstAttribute="leading" secondItem="xAE-wU-DWu" secondAttribute="trailing" constant="8" id="WLD-AC-XJ8"/>
-                        <constraint firstItem="xAE-wU-DWu" firstAttribute="centerY" secondItem="XGm-ep-YbO" secondAttribute="centerY" id="cpm-5U-wAA"/>
-                        <constraint firstAttribute="trailing" secondItem="M92-0S-ptF" secondAttribute="trailing" constant="20" id="hds-2R-Uyr"/>
-                        <constraint firstItem="M92-0S-ptF" firstAttribute="top" secondItem="XGm-ep-YbO" secondAttribute="top" constant="20" id="mgK-8z-euK"/>
+                        <constraint firstItem="DR8-TK-wWz" firstAttribute="top" secondItem="sra-sb-qe9" secondAttribute="bottom" id="3y9-Oy-Cqb"/>
+                        <constraint firstAttribute="trailing" secondItem="sra-sb-qe9" secondAttribute="trailing" id="8I9-vw-4lc"/>
+                        <constraint firstAttribute="trailing" secondItem="XGm-ep-YbO" secondAttribute="trailing" id="9lZ-KI-pcY"/>
+                        <constraint firstItem="sra-sb-qe9" firstAttribute="leading" secondItem="t3z-1z-aMS" secondAttribute="leading" id="GKH-PJ-af0"/>
+                        <constraint firstAttribute="height" constant="384" id="JtS-ZM-mOi"/>
+                        <constraint firstItem="1tU-ZV-wMy" firstAttribute="leading" secondItem="t3z-1z-aMS" secondAttribute="leading" id="KJv-5G-bRB"/>
+                        <constraint firstItem="XGm-ep-YbO" firstAttribute="top" secondItem="t3z-1z-aMS" secondAttribute="top" id="Lyh-Nx-COL"/>
+                        <constraint firstItem="XGm-ep-YbO" firstAttribute="leading" secondItem="t3z-1z-aMS" secondAttribute="leading" id="MQe-Ei-buM"/>
+                        <constraint firstAttribute="trailing" secondItem="DR8-TK-wWz" secondAttribute="trailing" id="RlU-2z-1gA"/>
+                        <constraint firstItem="DR8-TK-wWz" firstAttribute="top" secondItem="1tU-ZV-wMy" secondAttribute="bottom" id="XNi-Fd-yBN"/>
+                        <constraint firstItem="sra-sb-qe9" firstAttribute="top" secondItem="XGm-ep-YbO" secondAttribute="bottom" id="YRK-e9-pnB"/>
+                        <constraint firstItem="1tU-ZV-wMy" firstAttribute="top" secondItem="XGm-ep-YbO" secondAttribute="bottom" id="hIB-2x-SHD"/>
+                        <constraint firstAttribute="trailing" secondItem="1tU-ZV-wMy" secondAttribute="trailing" id="l5h-oh-doo"/>
+                        <constraint firstAttribute="bottom" secondItem="DR8-TK-wWz" secondAttribute="bottom" id="llq-gc-Z3C"/>
+                        <constraint firstItem="DR8-TK-wWz" firstAttribute="leading" secondItem="t3z-1z-aMS" secondAttribute="leading" id="o5i-VG-BKB"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DR8-TK-wWz">
-                    <rect key="frame" x="0.0" y="797" width="414" height="65"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fDW-rH-bAh" customClass="InsetsButton" customModule="lifeBox_Business" customModuleProvider="target">
-                            <rect key="frame" x="20" y="0.0" width="374" height="45"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="45" id="3Ga-L7-uKQ"/>
-                            </constraints>
-                            <state key="normal" title="Button"/>
-                            <connections>
-                                <action selector="onShareTap:" destination="-1" eventType="touchUpInside" id="zfF-lZ-GV7"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="65" id="agd-8e-tRk"/>
-                        <constraint firstAttribute="trailing" secondItem="fDW-rH-bAh" secondAttribute="trailing" constant="20" id="cHP-Cq-T81"/>
-                        <constraint firstItem="fDW-rH-bAh" firstAttribute="leading" secondItem="DR8-TK-wWz" secondAttribute="leading" constant="20" id="moc-V7-Li5"/>
-                        <constraint firstAttribute="bottom" secondItem="fDW-rH-bAh" secondAttribute="bottom" constant="20" id="yuo-D4-SWz"/>
-                    </constraints>
-                </view>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="sra-sb-qe9">
-                    <rect key="frame" x="0.0" y="65" width="414" height="732"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Sle-aw-2oP">
-                        <size key="itemSize" width="128" height="128"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="dimmedBackground"/>
             <constraints>
-                <constraint firstItem="XGm-ep-YbO" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="4mM-HQ-LuK"/>
-                <constraint firstItem="DR8-TK-wWz" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="K1D-hK-TsP"/>
-                <constraint firstItem="DR8-TK-wWz" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="KqG-SE-17X"/>
-                <constraint firstItem="XGm-ep-YbO" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Qo4-Tn-pdB"/>
-                <constraint firstItem="DR8-TK-wWz" firstAttribute="top" secondItem="sra-sb-qe9" secondAttribute="bottom" id="RQc-yn-HHo"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="DR8-TK-wWz" secondAttribute="trailing" id="TQr-Wh-NSf"/>
-                <constraint firstItem="sra-sb-qe9" firstAttribute="top" secondItem="XGm-ep-YbO" secondAttribute="bottom" id="VPC-Kc-Fe0"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="sra-sb-qe9" secondAttribute="trailing" id="bOv-vb-s6e"/>
-                <constraint firstItem="sra-sb-qe9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="tmU-rZ-2k8"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="XGm-ep-YbO" secondAttribute="trailing" id="xom-F5-HCG"/>
+                <constraint firstAttribute="trailing" secondItem="t3z-1z-aMS" secondAttribute="trailing" constant="20" id="bpS-DY-HXe"/>
+                <constraint firstItem="t3z-1z-aMS" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="tUH-kn-J5K"/>
+                <constraint firstItem="t3z-1z-aMS" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="xbu-c5-Htq"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="69.565217391304358" y="108.48214285714285"/>
         </view>
     </objects>
     <resources>
+        <namedColor name="dimmedBackground">
+            <color red="0.25098039215686274" green="0.32156862745098042" blue="0.38039215686274508" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
